--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: java
 jdk:
   - openjdk11
 
+dist: xenial
+
 before_install:
    - sudo apt-get -qq update
    - sudo apt-get install ant
-   - sudo apt-get install ant-optional
    - echo $(ant -version)
