updated Netbeans project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,14 +1,21 @@
+application.title=Yahtzee
+application.vendor=carl
+endorsed.classpath=
 #Fri Aug 07 21:16:26 CEST 2020
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.testng.classpath}
 excludes=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
 test.src.dir=${file.reference.yahtzee-test}
-run.modulepath=${javac.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
 annotation.processing.enabled=true
 build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
@@ -19,7 +26,7 @@ javadoc.author=false
 main.class=se.tastebin.Main
 junit.selected.version=3
 source.encoding=UTF-8
-javac.source=12
+javac.source=11
 includes=**
 javadoc.use=true
 jar.compress=false
@@ -39,7 +46,8 @@ jlink.additionalmodules=
 javadoc.encoding=${source.encoding}
 javac.classpath=
 mkdist.disabled=false
-run.test.modulepath=${javac.test.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/Yahtzee.jar
@@ -49,24 +57,26 @@ debug.test.modulepath=${run.test.modulepath}
 build.test.classes.dir=${build.dir}/test/classes
 javadoc.windowtitle=
 build.test.results.dir=${build.dir}/test/results
-annotation.processing.processor.options=
 dist.dir=dist
 build.dir=build
 dist.archive.excludes=
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.generated.dir=${build.dir}/generated
 javadoc.version=false
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 file.reference.yahtzee-src=src
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
-javac.target=12
+javac.target=11
 platform.active=default_platform
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/Yahtzee
 annotation.processing.run.all.processors=true
 javac.modulepath=
